--- a/contrib/pay/cfgfiles/etc/bind/named.conf
+++ b/contrib/pay/cfgfiles/etc/bind/named.conf
@@ -4,8 +4,8 @@
 // structure of BIND configuration files in Debian, *BEFORE* you customize 
 // this configuration file.
 //
-// If you are just adding zones, please do that in /etc/bind/named.conf.local
+// If you are just adding zones, please do that in /usr/local/etc/bind/named.conf.local
 
-include "/etc/bind/named.conf.options";
-include "/etc/bind/named.conf.local";
-include "/etc/bind/named.conf.default-zones";
+include "/usr/local/etc/bind/named.conf.options";
+include "/usr/local/etc/bind/named.conf.local";
+include "/usr/local/etc/bind/named.conf.default-zones";
