Updated config files to final version

--- a/contrib/pay/cfgfiles/etc/named.conf
+++ b/contrib/pay/cfgfiles/etc/named.conf
@@ -7,5 +7,12 @@
 // If you are just adding zones, please do that in /usr/local/etc/bind/named.conf.local
 
 include "/usr/local/etc/bind/named.conf.options";
+
+view internetzone in {
 include "/usr/local/etc/bind/named.conf.local";
 include "/usr/local/etc/bind/named.conf.default-zones";
+};
+
+view payzone pay {
+include "/usr/local/etc/bind/named.conf.pay";
+};
